# SKA-DFT

./: CMakeLists.txt  README.md  dft.h  dft_cpu.cpp  dft_cuda.cu  dft_starpu.cu  main.cpp  util.cpp
data/: compareResult.py  example_sources.txt  example_visibilities.txt
